# buddhi-review

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  _config.yml  conftest.py  pyproject.toml  release-please-config.json
.claude-plugin/: plugin.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  claude-code-review.yml  label-dependabot.yml  publish.yml  release-please.yml  tests-ready-for-ci.yml
buddhi_review/: __init__.py  __main__.py  actuators.py  adapter.py  backends.py  classify.py  cli.py  commit_push.py  config.py  create_pr.py  detectors.py  escalation_wait.py  fix_apply.py  gh_ingest.py  git_guardrail_hook.py  lang_syntax.py  launch-review.sh  launch-setup.sh  loop.py  managed_files.py  mapping.py  merge.py  model_call.py  netrc_writer.py  notifier.py  open_pr.py  plan_profile.py  plan_profiles.yml  policy.py  polish_state.py  pro_trial.py  rebase_gate.py  round_driver.py  seams.py  session_worktrees.py  setup_launcher.py  shell_env.py  skill_install.py  skill_provenance.py  test_runner.py  (+8 more)
buddhi_review/skills/create-pr/: SKILL.md
buddhi_review/skills/open-pr/: SKILL.md
buddhi_review/skills/review-pr/: SKILL.md
buddhi_review/skills/review-pr/references/: claude-code-review.yml  configuration.md  env-vars.md  reviewer-setup.md  tests-ready-for-ci.yml
docs/: ARCHITECTURE.md
scripts/: ensure_install.py  guardrail_hook.py
tests/: conftest.py  test_adapter_seams.py  test_auto_action_transparency.py  test_backends_seam.py  test_base_remote_identity_match.py  test_candidate_enumerator_skill_gate.py  test_classify.py  test_claude_auth_guard_workflow.py  test_claude_auto_on_open_detection.py  test_claude_rate_limit_marker.py  test_claude_usage_limit_workflow.py  test_claude_workflow_parity.py  test_clean_review_broadening.py  test_commit_push.py  test_commit_push_escalation_msg.py  test_commit_push_gate_polish.py  test_commit_push_refspec.py  test_commit_push_sweep_guard.py  test_commit_push_syntax_precheck.py  test_conftest_circuit_breaker.py  test_create_pr.py  test_detectors.py  test_embedded_js_syntax.py  test_escalation_merge_actuators.py  test_escalation_triggers.py  test_exit_rebase.py  test_f1_perrepo_write_status.py  test_f1_unclaimed_command_seam.py  test_f5_pre_merge_gate.py  test_f6_skill_perrepo_gate.py  test_fix_apply.py  test_fix_apply_hardening.py  test_fix_apply_intent.py  test_fix_apply_unicode_cleanup.py  test_gh_ingest.py  test_git_guardrail_hook.py  test_handback_rebase.py  test_head_aware_merge_gate.py  test_kernel_pipeline.py  test_l2_auto_merge_config.py  (+52 more)
tests/data/: claude_code_review_rev.json
tests/parity_fixtures/: 01_clean_round1_merge.json  02_substantive_fix_merge.json  03_cosmetic_fix_merge.json  04_business_question_escalate.json  05_invalid_skip_merge.json  06_outdated_skip_merge.json  07_pr_description_escalate.json  07_pr_description_rewrite_merge.json  08_classification_failed_escalate.json  09_quota_exclusion_handback.json  10_mixed_multibot_fix_and_skip_merge.json  11_operator_stop_on_failed_fix.json  12_substantive_fixer_skip_merge.json  13_pr_too_large_exclusion_handback.json  README.md
tools/: publish_gate.py
